2006-06-13  David Grellscheid  <David.Grellscheid@durham.ac.uk>

	* Decay/Perturbative/Makefile.am: SMWZDecayer and SMTopDecayer
	need to be built by default. Split out HwPerturbativeHiggsDecay.so

2006-06-07  David Grellscheid  <David.Grellscheid@durham.ac.uk>

	* */Makefile.am, acinclude.m4, configure.ac: New decayers only get
	built when requested in configure flag. Apple Looptool problem
	fixed. Optionally, all Looptool-dependent code can be disabled.

2006-06-01  David Grellscheid  <David.Grellscheid@durham.ac.uk>

	* Analysis/LEPEventShapes.*, Utilities/Histogram.*,
	Utilities/Statistic.*: Added support for weighted events.

	* src/Herwig++.cc: counter now only updates for every 1% of events.

2006-03-13  Peter Richardson  <Peter.Richardson@durham.ac.uk>

	* MatrixElement/MEPP2HiggsJet.icc (Repository): added matrix element for gamma
		gamma and Higgs + jet production

2006-03-02  Peter Richardson  <Peter.Richardson@durham.ac.uk>

	* Models/StandardModel/O2AlphaS: Added a 2-loop alphaS class using the same
	approach as FORTRAN HERWIG to make comparisions easier.

2006-02-27  Peter Richardson  <Peter.Richardson@durham.ac.uk>

	* MatrixElement/MEPP2GammaJet.h (Repository): spin correlation code added to
		gamma+jets ME

2006-02-27  Peter Richardson  <Peter.Richardson@durham.ac.uk>

	* MatrixElement/MEQCD2to2 (Repository): QCD 2-to-2 matrix elements added

2006-02-22  Peter Richardson  <Peter.Richardson@durham.ac.uk>

	* Finished the removal of the VectorMesonDecayerBase and TensorMesonDecayerBase
	classes

2006-02-22  Peter Richardson  <Peter.Richardson@durham.ac.uk>

	* Base class changed in a number of Vector decayers in preparation for the 
	removal of the VectorMesonDecayerBase class.

2006-02-21  Peter Richardson  <Peter.Richardson@durham.ac.uk>

	* changes to fix change conservation problems from branch merge
	  and change base class of TensorMeson2MesonDecayer.

2006-02-21  Peter Richardson  <Peter.Richardson@durham.ac.uk>
